// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/LocalTrack with a network track matches the snapshot of the network track 1`] = `
<li
  className="timelineTrack timelineTrackLocal"
>
  <div
    className="timelineTrackRow timelineTrackLocalRow"
    onClick={[Function]}
  >
    <div
      className="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title={null}
    >
      <button
        className="timelineTrackNameButton"
        type="button"
      >
        Network
      </button>
    </div>
    <div
      className="timelineTrackTrack"
    >
      <div
        className="timelineTrackNetwork"
        style={
          Object {
            "height": 35,
          }
        }
      >
        <canvas
          className="timelineTrackNetworkCanvas"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a thread track matches the snapshot of a local track 1`] = `
<li
  className="timelineTrack timelineTrackLocal"
>
  <div
    className="timelineTrackRow timelineTrackLocalRow"
    onClick={[Function]}
  >
    <div
      className="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title="thread: \\"DOM Worker\\" (0)
process: \\"tab\\" (222)"
    >
      <button
        className="timelineTrackNameButton"
        type="button"
      >
        DOM Worker
      </button>
    </div>
    <div
      className="timelineTrackTrack"
    >
      <div
        className="timelineTrackThread"
      >
        <div
          className="timelineTrackThreadIntervalMarkerOverview"
        >
          <canvas
            className="timelineTracingMarkersCanvas"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseUp={[Function]}
          />
        </div>
        <div
          className="threadActivityGraph"
        >
          <canvas
            className="threadActivityGraphCanvas threadActivityGraphCanvas"
            onMouseUp={[Function]}
          />
        </div>
        <div
          className="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;
